kubernetes/deploy-staging.yml
# http://stackoverflow.com/questions/36283660/creating-image-pull-secret-for-google-container-registry-that-doesnt-expire/36286707
# http://kubernetes.io/docs/user-guide/images/#specifying-imagepullsecrets-on-a-pod
# kubectl create secret docker-registry google-docker-registry \
#   --docker-server "https://us.gcr.io" \
#   --docker-username _json_key \
#   --docker-email edissons-admin@spair-api.iam.gserviceaccount.com \
#   --docker-password=$(cat /Users/drago/Documents/fulldive/edissons-admin/docker/jnlp-nodejs-slave/google.json)
#
#   kubectl patch deployment micro-test-staging -p '{"spec":{"template":{"spec":{"containers":[{"name":"app","image":"us.gcr.io/spair-api/hello:'"$CIRCLE_SHA1"'"}]}}}}'
#   kubectl patch -f kubernetes/deploy-staging.yml -p '{"spec":{"template":{"spec":{"containers":[{"name":"app","image":"us.gcr.io/spair-api/hello:0a138ccdf576ee3df1960c13835162e2d6fdea86"}]}}}}'
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: micro-test-staging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: microservice
        name: test
    spec:
      containers:
      - name: app
        image: us.gcr.io/spair-api/hello:latest
        ports:
        - containerPort: 8080
          name: transport
          protocol: TCP
        - containerPort: 8081
          name: healthcheck
          protocol: TCP
        command:
          - npm
          - start
      imagePullSecrets:
        - name: google-docker-registry
