kubernetes/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: micro-test
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: microservice
        name: micro-test
      annotations:
        scheduler.alpha.kubernetes.io/affinity: >
          {
            "podAntiAffinity": {
              "preferredDuringSchedulingIgnoredDuringExecution": [
                {
                  "weight": 1,
                  "namespaces": null,
                  "labelSelector": {
                    "matchExpressions": [
                      {
                        "key": "name",
                        "operator": "In",
                        "values": ["micro-test"]
                      }
                    ]
                  },
                  "topologyKey": "kubernetes.io/hostname"
                }
              ]
            }
          }
    spec:
      containers:
      - name: service
        # image: us.gcr.io/spair-api/fulldive-api:v2.23.1
        image: nginx
        ports:
        - containerPort: 8081
          name: transport-port
          protocol: TCP
        - containerPort: 8080
          name: health-port
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /etc/microservice
        livenessProbe:
          httpGet:
            path: /_ah/health
            port: health-port
          initialDelaySeconds: 10
          timeoutSeconds: 1
        command:
          - npm
          - start
      volumes:
        - name: config
          configMap:
            name: micro-test-config
