kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: micro-test
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/auth-realm: "Authentication Required"
    ingress.kubernetes.io/auth-secret: micro-test-auth
    ingress.kubernetes.io/auth-type: basic
spec:
  backend:
    serviceName: micro-test
    servicePort: 8080
  tls:
    - hosts:
      - micro-test.example.com
      secretName: micro-test-tls
  rules:
  - host: micro-test.example.com
    http:
      paths:
        - path: /
          backend:
            serviceName: micro-test
            servicePort: 8080
